Fix the get your domain button alignment so it works correctly on mobile and desktop

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -299,13 +299,10 @@
 	}
 
 	.empty-domains-list-card__actions {
-		text-align: center;
-		& > .button {
-			margin: 16px 16px 0 0;
-		}
-		& > .button:last-child {
-			margin-right: 0;
-		}
+		display: inline-flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		gap: 16px;
 	}
 
 	@include break-small {
